changes according to findbugs